# signal-compliance

./: .gitignore  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LAUNCH.md  LICENSE  NOTICE  README.md  RESEARCH.md  pyproject.toml
blog/: launch-ibsc.md
docs/: PRIOR-WORK.md  TAXONOMY.md  THREATS.md
docs/paper/: ibsc-paper.md
docs/spec/: v0.md
media/: media-kit.md
media/community-evals/: NousResearch__Hermes-3-Llama-3.1-70B.yaml  Qwen__Qwen2.5-72B-Instruct.yaml  Qwen__Qwen2.5-7B-Instruct.yaml  Qwen__Qwen3-Next-80B-A3B-Instruct.yaml  README.md  allowlist-request.md  deepseek-ai__DeepSeek-V3.yaml  eval.yaml  google__gemma-2-27b-it.yaml  meta-llama__Llama-3.1-8B-Instruct.yaml  meta-llama__Llama-3.2-3B-Instruct.yaml  meta-llama__Llama-3.3-70B-Instruct.yaml  microsoft__phi-4.yaml  mistralai__Mistral-Nemo-Instruct-2407.yaml  mistralai__Mistral-Small-24B-Instruct-2501.yaml
media/hf-dataset-fix/: README.md  items.jsonl
media/hf-space/: README.md  app.py  gen_index.py  index.html  leaderboard.csv
paper/: README.md  main.tex  refs.bib
paper/joss/: SUBMISSION.md  (+2 more)
results/: claude-code_claude-haiku-4-5-20251001.json  claude-code_claude-opus-4-8.json  claude-code_claude-sonnet-5.json  gemini_gemini-2.5-flash.json  gemini_gemini-2.5-pro.json  mock_microbench.json  openai_gpt-4.1.json  openai_gpt-4o-mini.json  openai_gpt-5.1.json  openai_gpt-5.5.json  openrouter_deepseek_deepseek-chat.json  openrouter_google_gemma-2-27b-it.json  openrouter_meta-llama_llama-3.1-8b-instruct.json  openrouter_meta-llama_llama-3.2-3b-instruct.json  openrouter_meta-llama_llama-3.3-70b-instruct.json  openrouter_microsoft_phi-4.json  openrouter_mistralai_mistral-nemo.json  openrouter_mistralai_mistral-small-24b-instruct-2501.json  openrouter_nousresearch_hermes-3-llama-3.1-70b.json  openrouter_qwen_qwen-2.5-72b-instruct.json  openrouter_qwen_qwen-2.5-7b-instruct.json  openrouter_qwen_qwen3-next-80b-a3b-instruct.json
scripts/: gen_community_evals.py  regrade.py  render_leaderboard.py  run_claudecode.py  run_microbench.py  run_open.py  run_real.py  transfer_analysis.py
tests/: test_core.py  test_families.py  test_metric.py  test_providers.py
(+25 files in other folders)
