[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signalbench"
version = "0.1.0"
description = "In-Band Signal Compliance (IBSC): one benchmark and one metric for whether an LLM agent responds correctly to environment-originated in-band control signals, given each signal's legitimacy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Thamilvendhan Munirathinam" },
]
keywords = [
    "llm",
    "agents",
    "benchmark",
    "prompt-injection",
    "instruction-following",
    "in-band-signal-compliance",
    "ibsc",
    "signalbench",
    "ai-safety",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
# Zero runtime dependencies: the core harness, metric, mock provider, and all
# five offline task sets run on the Python standard library alone.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.39"]
openai = ["openai>=1.40"]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/mthamil107/signal-compliance"
Repository = "https://github.com/mthamil107/signal-compliance"
Issues = "https://github.com/mthamil107/signal-compliance/issues"

[project.scripts]
signalbench = "signalbench.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
signalbench = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
ignore_missing_imports = true
